2005-06-27  Guilhem Lavaux  <guilhem@kaffe.org>

	* config/m68k/linux/md.h
	(sysdepCallMethod): Inlined function instead of a macro. Fixed the
	return of a float.

	* config/m68k/jit3-m68k.def
	(div_float): Fixed a misallocation of the destination register
	because of a wrong assert.

	* libraries/clib/fdlibm/ieeefp.h: Removed all preprocessor magic and
	replaced by the checking of the definition of WORDS_BIGENDIAN by
	configure.
	
2005-06-26  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* libraries/javalib/kaffe/tools/jar/Jar.java
	(addEntry): Delete "./" from the top of entryname.

2005-06-24  Ito Kazumitsu  <kaz@maczuka.gcd.org>

	* gnu/java/nio/charset/UnicodeLittle.java
	(newDecoder): Set the default endian to be little endian.

	* gnu/java/nio/charset/UTF_16Decoder.java
	(decodeLoop): Use 0x00FF instead of 0xFF for masking.

2005-06-24  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffe/main.c
	(options): "-classpath" must reset the classpath to the only specified
	by the following argument.

	Fixes bug reported by Daniel Bonniot <Daniel.Bonniot@inria.fr>

2005-06-23  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/soft.c
	(soft_div, soft_rem): Check for the divisor to return the correct
	value on all processors.

2005-06-23  Guilhem Lavaux  <guilhem@kaffe.org>

	* kaffe/kaffevm/Makefile.am
	(libkaffevm_la_SOURCES): Added javacall.c

	* kaffe/kaffevm/Makefile.in: Regenerated.

	* kaffe/kaffevm/classMethod.c,
	kaffe/kaffevm/classMethod.h
	(initCollector): Moved to gc.h
	(parsed_signature): Added real_nargs.
	(PSIG_RNARGS): New macro.
	(KaffeVM_countRealNumberOfArgs): New function to retrieve the real
	number of argument slot used.
	
	Doxified a bit.
	
	* kaffe/kaffevm/gc.h
	(initCollector): Moved from classMethod.h

	* kaffe/kaffevm/javacall.c
	(KaffeVM_callMethodA, KaffeVM_callMethodV): Moved from support.c
	along with their macros.
	(KaffeVM_countRealNumberOfArgs): New function.
	
	kaffe/kaffevm/support.c: